feat: ability to run a scan using a specific revision/baseline (#32)
Refs: #24