@@ -2,27 +2,20 @@ package ch.sbb.polarion.extension.xml_repair.repairers;
 
 import ch.sbb.polarion.extension.xml_repair.repairers.config.RepairerConfigMeta;
 import ch.sbb.polarion.extension.xml_repair.repairers.config.RepairerConfigType;
-import ch.sbb.polarion.extension.xml_repair.service.EntityRenderer;
 import ch.sbb.polarion.extension.xml_repair.service.XmlRepairPolarionService;
 import ch.sbb.polarion.extension.xml_repair.service.model.Issue;
 import ch.sbb.polarion.extension.xml_repair.service.model.scan.ScanContext;
-import ch.sbb.polarion.extension.xml_repair.repairers.config.UserConfigs;
-import ch.sbb.polarion.extension.xml_repair.util.Report;
-import com.polarion.alm.server.api.transaction.TransactionalExecutorImpl;
-import com.polarion.alm.tracker.ITrackerService;
 import com.polarion.alm.tracker.model.IModule;
-import com.polarion.alm.shared.api.transaction.internal.InternalReadOnlyTransaction;
 import com.polarion.subterra.base.data.identification.IContextId;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.MockedConstruction;
-import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import ch.sbb.polarion.extension.generic.test_extensions.PlatformContextMockExtension;
 
 import java.util.List;
 
+import static ch.sbb.polarion.extension.xml_repair.testsupport.RepairerTestFixtures.createScanContext;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.*;
@@ -30,15 +23,6 @@ import static org.mockito.Mockito.*;
 
 @ExtendWith({MockitoExtension.class, PlatformContextMockExtension.class})
 class ModuleContentLinksRepairerTest {
-
-    private ScanContext createScanContext(XmlRepairPolarionService polarionService) {
-        lenient().when(polarionService.getTrackerService()).thenReturn(mock(ITrackerService.class));
-        try (MockedStatic<TransactionalExecutorImpl> txMock = mockStatic(TransactionalExecutorImpl.class);
-             MockedConstruction<EntityRenderer> ignored = mockConstruction(EntityRenderer.class)) {
-            txMock.when(TransactionalExecutorImpl::currentTransaction).thenReturn(mock(InternalReadOnlyTransaction.class));
-            return new ScanContext(polarionService, List.of(), new UserConfigs(), new Report());
-        }
-    }
 
     @Test
     void testScanFindsBrokenLinks() {
@@ -97,7 +81,7 @@ class ModuleContentLinksRepairerTest {
         List<RepairerConfigMeta> configs = repairer.getConfigs();
 
         assertEquals(1, configs.size());
-        RepairerConfigMeta config = configs.get(0);
+        RepairerConfigMeta config = configs.getFirst();
         assertEquals(BaseLinksRepairer.CONVERT_TO_PLAIN_TEXT, config.getKey());
         assertEquals("Convert unresolvable links to plain text", config.getDescription());
         assertEquals("Replace items which cannot be found by the specified ID in any available project with a plain text", config.getHint());
